--- a/assignments/week04/day1/Assignment1/style.css
+++ b/assignments/week04/day1/Assignment1/style.css
@@ -1,82 +1,99 @@
-body{
-	font-family: 'Open Sans',sans-serif;
-	background-color: black;
-}
-#container{
-	width: 1000px;
-	height: 550px;
-	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(bgImg.jpg);
-	margin: 20px auto;	
-}
-#calculator{
-	width: 320px;
-	height: 520px;
-	background-color: #eaedef;
-	margin: 0 auto;
-	top: 20px;
-	position: relative;
-	border-radius: 5px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-#result{
-	height: 120px;
-}
-#history{
-	text-align: right;
-	height: 20px;
-	margin: 0 20px;
-	padding-top: 20px;
-	font-size: 15px;
-	color: #919191;
-}
-#output{
-	text-align: right;
-	height: 60px;
-	margin: 10px 20px;
-	font-size: 30px;
-}
-#keyboard{
-	height: 400px;
-}
-.operator, .number, .empty{
-	width: 50px;
-	height: 50px;
-	margin: 15px;
-	float: left;
-	border-radius: 50%;
-	border-width: 0;
-	font-weight: bold;
-	font-size: 15px;
-}
-.number, .empty{
-	background-color: #eaedef;
-}
-.number, .operator{
-	cursor: pointer;
-}
-.operator:active, .number:active{
-	font-size: 13px;
-}
-.operator:focus, .number:focus, .empty:focus{
-	outline: 0;
-}
-button:nth-child(4){
-	font-size: 20px;
-	background-color: #20b2aa;
-}
-button:nth-child(8){
-	font-size: 20px;
-	background-color: #ffa500;
-}
-button:nth-child(12){
-	font-size: 20px;
-	background-color: #f08080;
-}
-button:nth-child(16){
-	font-size: 20px;
-	background-color: #7d93e0;
-}
-button:nth-child(20){
-	font-size: 20px;
-	background-color: #9477af;
-}
+body {
+    width: 300px;
+    margin: 7% auto;
+    font-family: 'Source Sans Pro', sans-serif;
+    letter-spacing: 5px;
+    font-size: 0.8rem;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    
+  }
+  
+  .name{
+    color: azure;
+    font-size: 20px;
+    font: outline;
+  }
+  
+  .p{
+    color: rgb(236, 233, 233);
+  }
+  
+  
+  .input {
+    border: 15px solid rgb(198, 194, 231);
+    border-radius: 10px;
+    height: 400px;
+    padding-right: 15px;
+    padding-top: 10px;
+    text-align: right;
+    margin-right: 6px;
+    font-size: 1.2rem;
+   background-color: rgb(124, 159, 253);
+  }
+  
+  .input1{
+    color: rgb(29, 27, 27);
+    border: 9px solid rgb(248, 242, 242);
+    border-radius: 5px;
+    height: 20px;
+    padding-right: 15px;
+    padding-top: 10px;
+    text-align: right;
+    margin-right: 6px;
+    font-size: 1.2rem;
+   background-color: rgb(238, 238, 238);
+  }
+  
+  .input2{
+    color: rgb(29, 27, 27);
+    border: 9px solid rgb(248, 242, 242);
+    border-radius: 5px;
+    height: 20px;
+    padding-right: 15px;
+    padding-top: 10px;
+    text-align: right;
+    margin-right: 6px;
+    font-size: 1.2rem;
+   background-color: rgb(238, 238, 238);
+  }
+  
+  
+  .operators  {
+    display: inline-block;
+    border: 1px solid #bbb;
+    border-radius: 3px;
+    width: 50px;
+    text-align: center;
+    padding: 10px;
+    margin: 20px 4px 10px 0;
+    cursor: pointer;
+    background-color: #ddd;
+    transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
+  }
+  
+  .operators hover {
+    background-color: #ddd;
+    -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-color: #aaa;
+  }
+  
+  .operators active {
+    font-weight: bold;
+  }
+    
+  .input3{
+    color: rgb(29, 27, 27);
+    border: 9px solid rgb(248, 242, 242);
+    border-radius: 5px;
+    height: 20px;
+    padding-right: 15px;
+    padding-top: 10px;
+    text-align: right;
+    margin-right: 6px;
+    font-size: 1.2rem;
+   background-color: rgb(238, 238, 238);
+  }
+  
