--- a/coding-challenges/week09/day1/views/search.hbs
+++ b/coding-challenges/week09/day1/views/search.hbs
@@ -3,10 +3,10 @@
                 <div class="col-md-6">
                     <h2>Book Library</h2>
                     <h6> Enter the Language</h6>
-                    <form class="from-group">
+                    <form action="/" method="GET">
                         <input type="text" class="form-control" id="search-keyword" placeholder="E.g.,English" required>
                     </form>
-                    <button type="button" id="submit-btn" class="btn btn-info">Submit</button>
+                    <button type="button" id="submit-btn" class="btn btn-info" onclick="/">Submit</button>
                 </div>
             </div>
         </div>
