--- a/module-test/module-1/views/homepage.hbs
+++ b/module-test/module-1/views/homepage.hbs
@@ -1,12 +1,13 @@
  <div class="jumbotron">
   <table class="table table-striped">
     <tbody>
-        {{#each data}}
+        {{#each users}}
                         <tr>
                              <th scope="row">{{this.username}}</th>
                              <td>{{this.name}}</td>
                              <td>{{this.age}}</td>
                              <td>{{this.city}}</td>
+                             <td>{{this.year}}</td>
                         </tr>
           {{/each}}
       </tbody> 
